{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 8,
  "lineage": "6d0cb29f-a600-25f9-52be-fad89b1ecfd8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "keycloak",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007dd4cdc89d5d91d",
            "arn": "arn:aws:ec2:us-east-1:406207085797:instance/i-0e335ac5e945d0f2a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e335ac5e945d0f2a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08eea2a672bd69bab",
            "private_dns": "ip-10-20-1-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.33",
            "public_dns": "ec2-54-162-160-23.compute-1.amazonaws.com",
            "public_ip": "54.162.160.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02aeb11d2b0262fab",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a00eeb5d4be56e28",
            "tags": {
              "Name": "keycloak",
              "Role": "keycloak"
            },
            "tags_all": {
              "Name": "keycloak",
              "Role": "keycloak"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-056e7fe8d9eb77429"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.keycloak",
            "aws_subnet.this",
            "aws_vpc.this",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:internet-gateway/igw-0bc968b344614e2ab",
            "id": "igw-0bc968b344614e2ab",
            "owner_id": "406207085797",
            "tags": {
              "Name": "kafka-demo-igw"
            },
            "tags_all": {
              "Name": "kafka-demo-igw"
            },
            "vpc_id": "vpc-0de05d8de64a2725c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:route-table/rtb-0c373be7d7542f3a8",
            "id": "rtb-0c373be7d7542f3a8",
            "owner_id": "406207085797",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bc968b344614e2ab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kafka-demo-rt"
            },
            "tags_all": {
              "Name": "kafka-demo-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de05d8de64a2725c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cc00ef7a44e1432",
            "route_table_id": "rtb-0c373be7d7542f3a8",
            "subnet_id": "subnet-0a00eeb5d4be56e28"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.this",
            "aws_subnet.this",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "keycloak",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:security-group/sg-056e7fe8d9eb77429",
            "description": "Keycloak - reachable only from inside the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-056e7fe8d9eb77429",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "Keycloak HTTP from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "keycloak-private-sg",
            "name_prefix": "",
            "owner_id": "406207085797",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "keycloak-private-sg"
            },
            "tags_all": {
              "Name": "keycloak-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de05d8de64a2725c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:subnet/subnet-0a00eeb5d4be56e28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a00eeb5d4be56e28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "406207085797",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kafka-demo-subnet"
            },
            "tags_all": {
              "Name": "kafka-demo-subnet"
            },
            "vpc_id": "vpc-0de05d8de64a2725c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:406207085797:vpc/vpc-0de05d8de64a2725c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0a8d36663f120c019",
            "default_route_table_id": "rtb-08c5b3dcaec0557c5",
            "default_security_group_id": "sg-00560f8739604a252",
            "dhcp_options_id": "dopt-0c245e0b2f28782f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de05d8de64a2725c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c5b3dcaec0557c5",
            "owner_id": "406207085797",
            "tags": {
              "Name": "kafka-demo-vpc"
            },
            "tags_all": {
              "Name": "kafka-demo-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}